[gd_scene load_steps=2 format=3 uid="uid://cbd41dctkeydf"]

[ext_resource type="Script" path="res://upgrades/upgrade_menu_button.gd" id="1_n5gd1"]

[node name="UpgradeMenuButton" type="PanelContainer"]
size_flags_horizontal = 3
script = ExtResource("1_n5gd1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="UpgradeName" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Clip Size +1"
horizontal_alignment = 1

[node name="UpgradeCost" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "10
"
horizontal_alignment = 1
vertical_alignment = 3

[node name="UpgradeBuyButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "BUY"
